--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <BI-Nav [BIGrid]="BIGrid"></BI-Nav>
-<lib-BI-Grid [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></lib-BI-Grid>
+<lib-BI-Grid #Header [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></lib-BI-Grid>
 <ff-alerts></ff-alerts>
