--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<BI-Nav [BIGrid]="BIGrid"></BI-Nav>
-<lib-BI-Grid #Header [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></lib-BI-Grid>
+<BI-Nav [BIGrid]="Header"></BI-Nav>
+<BI-Grid #Header [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></BI-Grid>
 <ff-alerts></ff-alerts>
