--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <BI-Nav [BIGrid]="Header"></BI-Nav>
-
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+  <mat-tab label="Overview">
 <lib-bi-grid-layout [rows]="[90]" [cols]="['100%']" [gap]="5">
     <lib-bi-grid-layout-item [col]="1" [row]="1">
         <BI-Grid #Header [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></BI-Grid>
     </lib-bi-grid-layout-item>
 </lib-bi-grid-layout>
-
+  </mat-tab>
+</mat-tab-group>
 <ff-alerts></ff-alerts>
