--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
         <mat-tab label="Overview">
             <BI-grid-layout [rows]="[90]" [cols]="['100%']" [gap]="5">
                 <BI-grid-layout-item [col]="1" [row]="1">
-                    <BI-Grid #Header [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></BI-Grid>
+                    <BI-Grid #Header  [Key]="'CategoryId'" [DataService]="dataService" [Columns]="columns"></BI-Grid>
                 </BI-grid-layout-item>
             </BI-grid-layout>
         </mat-tab>
         <mat-tab label="General">
-            <form *ngIf="BIGrid && BIGrid.CurrentSelectRow" [formGroup]="BIGrid.CurrentSelectRow">
+            <form [formGroup]="Header.CurrentSelectRow">
                 <BI-grid-layout [rows]="['auto']" [cols]="['30%', '30%', '30%']" [gap]="10">
                     <BI-grid-layout-item [col]="1" [row]="1">
                         <label for="">Category Number</label>
