--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="d-flex">
+    <app-side-nav></app-side-nav>
+    <div class="container">
     <BI-Nav [BIGrid]="Header"></BI-Nav>
     <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
         <mat-tab label="Overview">
@@ -51,5 +53,6 @@
             </form>
         </mat-tab>
     </mat-tab-group>
+</div>
 </div>
 <ff-alerts></ff-alerts>
