--- a/src/app/lay-out/side-nav/side-nav.component.html
+++ b/src/app/lay-out/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
   <div class="custom-toolbar text-nowrap ml-1 d-flex">
-    <div [style.background-color]="collapsed ? '#3688FC': null" class="pb-0">
+    <div [style.background-color]="collapsed ? '#3688FC': null"  class="pb-0">
       <kendo-button
         fillMode="none"
         icon="menu"
@@ -8,11 +8,11 @@
         (click)="drawer.toggle(); changeBackGround()"
       ></kendo-button>
     </div>
-    <div class="m-2">
+    <div class="m-2 pb-1">
       <img src="assets/images/salesbuzz-dark-logo.svg" alt="">
     </div>
     </div>
-    <kendo-drawer-container>
+    <kendo-drawer-container style="height: 100%;">
       <kendo-drawer
         #drawer
         [items]="items"
@@ -24,11 +24,14 @@
       >
       <ng-template kendoDrawerItemTemplate let-item>
         <img [src]="item.icon" />
-            <div *ngIf="!collapsed">{{ item.text }}</div>
+        <div *ngIf="!collapsed">
+          <div *ngIf="item.children">{{ item.text }}</div>
+          <div *ngIf="!item.children"><a [routerLink]="item.path" style="color: inherit;" class="text-decoration-none">{{ item.text }}</a></div>
+        </div>
     </ng-template>
       </kendo-drawer>
 
       <kendo-drawer-content>
-        <app-nav-content [selectedItem]="selected"></app-nav-content>
+        <app-nav-content (backToNav)="drawer.toggle(); changeBackGround()" [collapsed]="collapsed" [items]="items" [selectedItem]="selected"></app-nav-content>
       </kendo-drawer-content>
     </kendo-drawer-container>
