--- a/src/app/lay-out/nav-content/nav-content.component.html
+++ b/src/app/lay-out/nav-content/nav-content.component.html
@@ -1,7 +1,7 @@
   <div *ngFor="let item of items">
-  <div *ngIf="(selectedItem === item.text) && item.children">
+  <div class="side-content-container" *ngIf="(selectedItem === item.text) && item.children">
   <div class="d-flex">
-    <kendo-button (click)="returnToNav()" class="p-0 mt-1" fillMode="clear" imageUrl="assets/icons/back.svg"></kendo-button><p class="text-nowrap text-center m-3">{{item.text}}</p>
+    <kendo-button (click)="returnToNav()" class="py-0 px-2 mt-1" fillMode="clear" imageUrl="assets/icons/back.svg"></kendo-button><p class="text-nowrap text-center m-3">{{item.text}}</p>
   </div>
 <div *ngIf="item.children">
   <div *ngFor="let child of item.children; index as i">
@@ -23,4 +23,5 @@
 </div>
 </div>
   </div>
+</div>
 </div>
