--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #F6F6F6;
+  background-color: #F9FAFC;
 
   .mat-mdc-tab-body-wrapper {
     height: 75vh;
