--- a/src/app/lay-out/nav-content/nav-content.component.scss
+++ b/src/app/lay-out/nav-content/nav-content.component.scss
@@ -4,4 +4,8 @@
 ::ng-deep .k-expander-title{
     color: #313A46 !important;
 }
+.sideBar-btn:hover{
+background-color: #ffff ;
+color: #3688FC;
+}
 }
